fix padding, alignment, font + text + text-shadow

--- a/getalife/assets/css/index.css
+++ b/getalife/assets/css/index.css
@@ -4,7 +4,7 @@
     grid-row: 2;
 }
 
-.nav a {
+.nav-index a {
     float: right;
     display: block;
     color: #fff;
@@ -14,30 +14,30 @@
     font-size: 17px;
     font-family: Helvetica;
     font-weight: lighter;
-    text-shadow: 0.5px 1px rgb(187, 187, 187);
+    text-shadow: 0px 0.5px 1px rgb(100, 100, 100);
 }
   
-.nav a:hover {
-    color: #494848;
-}
-  
-.nav .icon {
+.nav-index .icon {
     display: none;
 }
 
-.btn0 {
+.btn-index {
     display: block;
     text-align: center;
     color: #fff;
-    text-shadow: 1px 1.5px rgb(170, 170, 170);
+    text-shadow: 0px 1px 3px rgb(100, 100, 100);
     margin-top: 2%;
     margin-left: 25%;
     opacity: 80%;
     width: 50%;
 }
 
-.nextpage a:hover {
-    color: #8b8a8a;
+.btn-index a:hover {
+    background-color: #494848;
+}
+
+.button-index a:hover {
+    background-color: #3a3a3a;
 }
 /*
 #background {
@@ -64,14 +64,14 @@ body {
     color: #fff;
 } 
 
-.mainH {
+.main-index {
     display: block;
     align-self: center;
     font-weight: normal;
     font-size: 8.5em;
     margin-top: 10%;
     margin-left: auto;
-    text-shadow: 3px 6px rgb(14, 13, 13);
+    text-shadow: 0px 3px 6px rgb(100, 100, 100);
     resize: both;
 }
 
@@ -82,7 +82,7 @@ body {
     font-size: 3em;
     margin-top: -0.5em;
     margin-left: auto;
-    text-shadow: 1.5px 1.5px rgb(170, 170, 170);
+    text-shadow: 0px 1px 3px rgb(100, 100, 100);
     resize: both;
 }
 
